    *** Usability ***
	- changing travel mode in the map screen will now trigger a route recalc if a route is currently displayed or calculated 
    *** Others ***
    - reverted possibe bugfix for startup trace crash issue on Nokia E72 when not in full-screen mode
      and Gps activated and started at startup, as it didn't fix the bug.

GpsMid 0.8.2
    *** Map Display ***
    - some support for on-the web raster map form; if a valid raster map url
      is configured and raster background map option is on, the raster map
      is shown as background to the normal vector map. Options for switching
      areas & buildings off if background raster map is shown.
      The map format is known also as TMS; although in strict terms it's not
      TMS, as tile numbering in the de facto standard tile servers is different
      than what's specified in TMS.
      There's some simple in-memory caching for J2ME and file caching to sdcard
      on Android (no file cache for J2ME yet).
    *** OSM Editing ***
    - possibility to open area for editing OSM data in web browser, default editor is
      currently Potlatch in openstreetmap.org
    *** Barrier support off by default***
    - Removing route connections because of barriers is disabled by default for now,
      as in some regions too many POIs becoming unreachable because of barriers before the
      destination way. Barrier support can be switchen on with the .properties option useBarriers.
    *** Android Support ***
    - back key to exit from camera preview no longer crashes GpsMid
    - unintentional back key exit prevented also in OSM Poi entry and maybe other places
    - camera rotation should now be correct

GpsMid 0.8.1
    *** Bug fixes ***
    - bugfix for trace icon menu crash on non-touch phones with no internet access
      (full-connected with internet access switched off in GpsMid menu, non-connected versions)
    - possibe bugfix for startup trace crash issue on Nokia E72 when not in full-screen mode